--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-xs-4" style="background:#333;">asdf</div>
-            <div class="col-xs-4" style="background:#555;">asdf</div>
-            <div class="col-xs-4" style="background:#777;">
-                <div class="btn btn-primary">The Epic Button</div>
-            </div>
+            <p>This is a test.</p>
         </div>
     </div>
 </body>
