--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>Welcome to Pysazz!</h1>
+                <h1 style="text-align:center;">Welcome to Pysazz!</h1>
+            </div>
+            <div class="col-xs-12">
+                <p>Pysazz is a CSS Framework Build tool that utilizes SASS as a way to combine CSS from your favorite frameworks.  Pysazz gives you the ability to take the buttons from Bootstrap, combine it with your favorite CSS reset, and write your own SASS files and then compile those files into your own CSS framework.</p>
+                <p>Pysazz is a command-line interface written in Python.  Pysazz is easy-to-use, cross-platform, and compatible with any existing CSS or SASS files.  This means that you can use any SASS or CSS file from any of your favorite frameworks and have it compiled into your own unique framework.</p>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
