--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
                 <p>Here is an example of a pysazz config file:</p>
                 <pre>
                     <code>
-                        <?xml version="1.0"?>
-                        <config>
-                            <links>
-                                <link folder="partials" saveas="_reset.scss">http://meyerweb.com/eric/tools/css/reset/reset.css</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_buttons.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_tab-focus.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_vendor-prefixes.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_clearfix.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_opacity.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid-framework.scss</link>
-                                <link folder="partials/mixins">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid.scss</link>
-                                <link folder="partials">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss</link>
-                                <link folder="partials">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_normalize.scss</link>
-                                <link folder="partials">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_buttons.scss</link>
-                                <link folder="partials">https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_grid.scss</link>
-                            </links>
-                        </config>
+&lt;?xml version="1.0"?&gt;
+&lt;config&gt;
+    &lt;links&gt;
+        &lt;link folder="partials" saveas="_reset.scss"&gt;http://meyerweb.com/eric/tools/css/reset/reset.css&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_buttons.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_tab-focus.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_vendor-prefixes.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_clearfix.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_opacity.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid-framework.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_normalize.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_buttons.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_grid.scss&lt;/link&gt;
+    &lt;/links&gt;
+&lt;/config&gt;
                     </code>
                 </pre>
             </div>
