--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 &lt;config&gt;
     &lt;links&gt;
         &lt;link folder="partials" saveas="_reset.scss"&gt;http://meyerweb.com/eric/tools/css/reset/reset.css&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_buttons.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_tab-focus.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_vendor-prefixes.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_clearfix.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_opacity.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid-framework.scss&lt;/link&gt;
-        &lt;link folder="partials/mixins"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid.scss&lt;/link&gt;
-        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss&lt;/link&gt;
-        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_normalize.scss&lt;/link&gt;
-        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_buttons.scss&lt;/link&gt;
-        &lt;link folder="partials"&gt;https://raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_grid.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_buttons.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_tab-focus.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_vendor-prefixes.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_clearfix.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_opacity.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid-framework.scss&lt;/link&gt;
+        &lt;link folder="partials/mixins"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/mixins/_grid.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_variables.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_normalize.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_buttons.scss&lt;/link&gt;
+        &lt;link folder="partials"&gt;//raw.githubusercontent.com/twbs/bootstrap-sass/master/assets/stylesheets/bootstrap/_grid.scss&lt;/link&gt;
     &lt;/links&gt;
 &lt;/config&gt;
                     </code>
