--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-xs-12">
                 <h2 id="installation">Installation</h2>
-                <p>Pysazz will eventially have compiled executables to run, but for now, just drop the "pysazz.py" file into your project.  Pysazz's dependencies include Python 3.4.1 and libsass for Python which you can download here: <a href="https://pypi.python.org/pypi/libsass">https://pypi.python.org/pypi/libsass</a></p>
+                <p>Pysazz will eventially have compiled executables to run, but for now, just drop the "pysazz.py" file into your project.  Pysazz's dependencies include Python 3.4.1 and libsass for Python which you can download here: <a href="https://pypi.python.org/pypi/libsass">https://pypi.python.org/pypi/libsass</a>  For more permanent installations, you will want to add Pysazz into your path.  For temporary installations, you will want to run commands as following: "python3 pysazz.py <command name> &lt;args&gt;"</p>
             </div>
             <div class="col-xs-12">
                 <h2 id="usage">Usage</h2>
